--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ ethers-flashbots = "0.15.0"
 mev-share-sse = "0.3.0"
 alloy-primitives = "0.7.5"
 hex-literal = "0.4.1"
+revm = { version = "9.0.0", features = ["ethersdb"] }
